cli/test/fixtures/bad/gradient_abuse.dart
// Bad: purple-to-pink gradient
final g = LinearGradient(colors: [Colors.purple, Colors.pink]);
